--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Mon Site</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<h1>Le super nouveau site de l'école</h1>
 	<section>
 		<h2>Informations de l'éole :</h2>
-		<ul>
+		<ol>
 			<li>Nom: ESGI</li>
 			<li>Adresse: 242 Rue du Feaubourg Saint Antoinette, 75011 Paris</li>
 			<li>Directeur: Kamal Sananes</li>
-		</ul>
+		</ol>
 	</section>
 </body>
 </html>
