Ajout de la ligne prof ainsi qu'une description de chaque <li>

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 		<h2>Informations de l'éole :</h2>
 		<ul>
 			<li>Nom: ESGI</li>
+			Super école.
 			<li>Adresse: 242 Rue du Feaubourg Saint Antoinette, 75011 Paris</li>
+			Super adresse.
 			<li>Directeur: Kamal Sananes</li>
+			Super directeur.
+			<li>Prof de git: Thomas Ecalle<li>
+			Super prof.
 		</ul>
 	</section>
 </body>
